@@ -1,3 +1,11 @@
+Version 20     2015-March-25
+
+--Added a chime for amulet-holder on the display-stake screen when an amulet
+  game is ready for them.
+
+
+
+
 Version 19     Live Server Fixes
 
 --Fixed bug that prevented next batch of amulets from being handed out.
